--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,21 @@
             "Prism\\": "src/Prism/"
         }
     },
+    "scripts": {
+        "tests": "phpunit --color=always --testdox tests/"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Prism\\Tests\\": "tests"
+        }
+    },
     "authors": [
         {
             "name": "Marcos Busto",
             "email": "bustosuarezmarcos@gmail.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^11.1"
+    }
 }
