--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     },
     "scripts": {
-        "tests": "phpunit --color=always --testdox tests/"
+        "tests": "phpunit --color=always --testdox tests/",
+        "php-cs-fixer": "php-cs-fixer fix --diff"
     },
     "autoload-dev": {
         "psr-4": {
@@ -23,6 +24,7 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^11.1"
+        "phpunit/phpunit": "^11.1",
+        "friendsofphp/php-cs-fixer": "^3.56"
     }
 }
