--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,8 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "friendsofphp/php-cs-fixer": "^3.56"
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
     }
 }
