--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Prism\\": "src/"
+            "Prism\\": "src/",
+            "App\\": "app/"
         },
         "files": [
             "src/Helpers/app.php",
