--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "friendsofphp/php-cs-fixer": "^3.56"
     },
     "require": {
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "symfony/console": "^7.1"
     }
 }
